--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,135 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-cycler=0.12.1
-debugpy=1.8.0
-decorator=5.1.1
-docker-pycreds=0.4.0
-exceptiongroup=1.2.0
-executing=2.0.1
-farama-notifications=0.0.4
-filelock=3.9.0
-fonttools=4.45.1
-fsspec=2024.2.0
-gitdb=4.0.11
-gitpython=3.1.41
-gmp=6.2.1
-gmpy2=2.1.2
-google-auth=2.27.0
-google-auth-oauthlib=1.2.0
-grpcio=1.60.1
-gym=0.26.2
-gym-notices=0.0.8
-gymnasium=0.29.1
-idna=3.6
-importlib-metadata=6.8.0
-importlib-resources=6.1.1
-ipykernel=6.26.0
-ipython=8.18.1
-jedi=0.19.1
-jinja2=3.1.2
-jupyter-client=8.6.0
-jupyter-core=5.5.0
-kiwisolver=1.4.5
-libcxx=14.0.6
-libffi=3.4.4
-markdown=3.5.2
-markupsafe=2.1.1
-matplotlib=3.8.2
-matplotlib-inline=0.1.6
-mpc=1.1.0
-mpfr=4.0.2
-mpmath=1.3.0
-ncurses=6.4
-nest-asyncio=1.5.8
-networkx=3.1
-numpy=1.26.2
-oauthlib=3.2.2
-openssl=3.0.10
-packaging=23.2
-pandas=2.2.0
-parso=0.8.3
-pexpect=4.9.0
-pillow=10.1.0
-pip=23.2.1
-platformdirs=4.0.0
-prompt-toolkit=3.0.41
-protobuf=4.23.4
-psutil=5.9.6
-ptyprocess=0.7.0
-pure-eval=0.2.2
-pyasn1=0.5.1
-pyasn1-modules=0.3.0
-pygments=2.17.2
-pyparsing=3.1.1
-python=3.9.17
-python-dateutil=2.8.2
-pytz=2023.4
-pyyaml=6.0.1
-pyzmq=25.1.1
-readline=8.2
-requests=2.31.0
-requests-oauthlib=1.3.1
-rsa=4.9
-scipy=1.12.0
-sentry-sdk=1.40.0
-setproctitle=1.3.3
-setuptools=68.0.0
-simplejson=3.19.2
-six=1.16.0
-smmap=5.0.1
-sqlite=3.41.2
-stack-data=0.6.3
-sympy=1.11.1
-tensorboard=2.15.1
-tensorboard-data-server=0.7.2
-tk=8.6.12
-torch=2.2.0
-torchvision=0.17.0
-tornado=6.3.3
-tqdm=4.66.1
-traitlets=5.13.0
-typing-extensions=4.9.0
-tzdata=2023.4
-urllib3=2.2.0
-wandb=0.16.2
-wcwidth=0.2.12
-werkzeug=3.0.1
-wheel=0.38.4
-xz=5.4.2
-zipp=3.17.0
-zlib=1.2.13
+absl-py==2.1.0
+aiofiles==24.1.0
+aiosqlite==0.20.0
+asttokens==2.4.1
+asyncua==1.1.5
+beautifulsoup4==4.12.3
+casadi==3.6.6
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
+CityLearn==2.2b0
+click==8.1.7
+cloudpickle==3.0.0
+comm==0.2.2
+contourpy==1.2.1
+cplex==22.1.1.2
+cryptography==43.0.0
+cycler==0.12.1
+debugpy==1.8.5
+decorator==5.1.1
+do_mpc==4.6.5
+docker-pycreds==0.4.0
+docplex==2.28.240
+exceptiongroup==1.2.2
+executing==2.0.1
+Farama-Notifications==0.0.4
+filelock==3.15.4
+fonttools==4.53.1
+fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
+gprof2dot==2024.6.6
+grpcio==1.67.1
+gym==0.26.2
+gym-notices==0.0.8
+gymnasium==0.29.1
+h5py==3.12.1
+idna==3.7
+importlib_metadata==8.4.0
+importlib_resources==6.4.4
+ipykernel==6.29.5
+ipython==8.18.1
+ipywidgets==8.1.5
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.5
+Markdown==3.7
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mpmath==1.3.0
+nest-asyncio==1.6.0
+networkx==3.2.1
+NREL-PySAM==5.1.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+onnx==1.16.2
+orjson==3.10.11
+packaging==24.1
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+pip==24.2
+platformdirs==4.2.2
+plotly==5.24.1
+prompt_toolkit==3.0.47
+protobuf==5.27.3
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pvlib==0.11.1
+pycparser==2.22
+pyglet==1.5.27
+Pygments==2.18.0
+pyOpenSSL==24.2.1
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+PyVirtualDisplay==3.0
+PyYAML==6.0.2
+pyzmq==26.2.0
+requests==2.32.3
+scikit-learn==1.5.2
+scipy==1.13.1
+seaborn==0.13.2
+sentry-sdk==2.13.0
+setproctitle==1.3.3
+setuptools==72.1.0
+simplejson==3.19.3
+six==1.16.0
+smmap==5.0.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+stable_baselines3==2.3.2
+stack-data==0.6.3
+sympy==1.13.1
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensordict==0.6.2
+threadpoolctl==3.5.0
+torch==2.5.1
+torchrl==0.6.0
+torchvision==0.20.1
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+triton==3.1.0
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
+vmas==1.4.3
+wandb==0.18.5
+wcwidth==0.2.13
+Werkzeug==3.1.2
+wheel==0.43.0
+widgetsnbextension==4.0.13
+zipp==3.20.0
